# sarvam-rs

./: .gitignore  Cargo.toml  License.md  README.md
.github/workflows/: ci.yml  publish.yml
examples/: chat.rs  chat_stream.rs  document_intelligence.rs  language_identification.rs  speech_to_text.rs  speech_to_text_batch.rs  speech_to_text_stream.rs  speech_to_text_translate.rs  speech_to_text_translate_batch.rs  speech_to_text_translate_stream.rs  text_to_speech.rs  text_to_speech_stream.rs  translate.rs  transliterate.rs
src/: client.rs  config.rs  error.rs  lib.rs
src/api/: chat.rs  document_intelligence.rs  mod.rs  speech_to_text.rs  speech_to_text_batch.rs  speech_to_text_translate.rs  text.rs  text_to_speech.rs
src/streaming/: chat_stream.rs  mod.rs  stt_ws.rs  tts_ws.rs
src/types/: chat.rs  common.rs  document_intelligence.rs  job.rs  mod.rs  speech_to_text.rs  speech_to_text_batch.rs  text_to_speech.rs  translate.rs  transliterate.rs
